# Ludoria-sclib

./: CMakeLists.txt  README.md
configs/: server.json
docs/: StC_callbacks_snippets.md
src/: Config.cpp  Config.h  CtS.cpp  CtS.h  Network.cpp  Network.h  PacketTypes.h  StC.cpp  StC.h  main.cpp
src/ui/: GameUI.cpp  GameUI.h  UIManager.cpp  UIManager.h
src/utils/: Logger.cpp  Logger.h
